@@ -586,6 +586,18 @@
   * Add upstream Rev. 3075:
     - Update: www/vicidial/admin.php: Added indicators for lists being assigned
         to non-existing campaigns.
+  * Add upstream Rev. 3076:
+    - Update: UPGRADE,
+        extras/MySQL_AST_CREATE_tables.sql,
+        extras/mysql_update/mysql-1534.sql,
+        extras/upgrade_2.14.sql,
+        www/agc/vdc_db_query.php,
+        www/vicidial/admin.php,
+        www/vicidial/help_documentation.txt: Added more hide_call_log_info
+          options.
+  * Add upstream Rev. 3077:
+    - Update: www/vicidial/AST_timeonVDADall.php: Fix for columns display
+        issue #1141.
 
 2.25.27
   [Jörg Fring-Fürst]
